--- a/es/index.html
+++ b/es/index.html
@@ -28,7 +28,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
   <div id="header-region" class="clear-block"><div id="block-locale-0" class="clear-block block block-locale">
 
 
-  <div class="content"><ul><li class="en first"><a href="../index/" class="language-link">English</a></li>
+  <div class="content"><ul><li class="en first"><a href="../" class="language-link">English</a></li>
 <li class="pt-br"><a href="../pt-br/" class="language-link">Português</a></li>
 <li class="es active"><a href="index.html" class="language-link active">Español</a></li>
 <li class="zh-hant last"><a href="../zh-tw/" class="language-link">正體中文</a></li>
