--- a/aggregator/sources/5/index.html
+++ b/aggregator/sources/5/index.html
@@ -40,7 +40,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 
       <div id="header">
         <div id="logo-floater">
-        <h1><a href="../../../index/" title="LXDE.org"><img src="../../../sites/default/files/garland_logo/index.png" alt="LXDE.org" id="logo" /><span>LXDE.org</span></a></h1>        </div>
+        <h1><a href="../../../" title="LXDE.org"><img src="../../../sites/default/files/garland_logo/index.png" alt="LXDE.org" id="logo" /><span>LXDE.org</span></a></h1>        </div>
 
                   <ul class="links primary-links"><li class="menu-197 first"><a href="../../../lxde/" title="About LXDE">About</a></li>
 <li class="menu-231"><a href="../../../download/" title="">Download</a></li>
@@ -55,13 +55,13 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 
       
       <div id="center"><div id="squeeze"><div class="right-corner"><div class="left-corner">
-          <div class="breadcrumb"><a href="../../../index/">Home</a> › <a href="../../">Feed aggregator</a> › <a href="../">Sources</a></div>                              <h2>LXDE Forum</h2>                                                  <div class="clear-block">
+          <div class="breadcrumb"><a href="../../../">Home</a> › <a href="../../">Feed aggregator</a> › <a href="../">Sources</a></div>                              <h2>LXDE Forum</h2>                                                  <div class="clear-block">
             <div id="aggregator">
   <div class="feed-source">
   <a href="http://forum.lxde.org/rss.php" class="feed-icon"><img src="../../../misc/feed/index.png" alt="Syndicate content" title="LXDE Forum feed" width="16" height="16" /></a>    <div class="feed-description">
       </div>
   <div class="feed-url">
-    <em>URL:</em> <a href="../../../index/">http://lxde.org/</a>
+    <em>URL:</em> <a href="../../../">http://lxde.org/</a>
   </div>
   <div class="feed-updated">
     <em>Updated:</em> never  </div>
