--- a/aggregator/sources/index.html
+++ b/aggregator/sources/index.html
@@ -40,7 +40,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 
       <div id="header">
         <div id="logo-floater">
-        <h1><a href="../../index/" title="LXDE.org"><img src="../../sites/default/files/garland_logo/index.png" alt="LXDE.org" id="logo" /><span>LXDE.org</span></a></h1>        </div>
+        <h1><a href="../../" title="LXDE.org"><img src="../../sites/default/files/garland_logo/index.png" alt="LXDE.org" id="logo" /><span>LXDE.org</span></a></h1>        </div>
 
                   <ul class="links primary-links"><li class="menu-197 first"><a href="../../lxde/" title="About LXDE">About</a></li>
 <li class="menu-231"><a href="../../download/" title="">Download</a></li>
@@ -55,7 +55,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 
       
       <div id="center"><div id="squeeze"><div class="right-corner"><div class="left-corner">
-          <div class="breadcrumb"><a href="../../index/">Home</a> › <a href="../">Feed aggregator</a></div>                              <h2>Sources</h2>                                                  <div class="clear-block">
+          <div class="breadcrumb"><a href="../../">Home</a> › <a href="../">Feed aggregator</a></div>                              <h2>Sources</h2>                                                  <div class="clear-block">
             <div id="aggregator">
   <h2>LXDE Blog</h2>
 <div class="item-list"><ul><li class="first"><a href="http://blog.lxde.org/?p=1348">LXPanel 0.8.1 released.</a> <span class="age"><em>9 weeks 2 days</em> old</span></li>
