--- a/contact/index.html
+++ b/contact/index.html
@@ -40,7 +40,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 
       <div id="header">
         <div id="logo-floater">
-        <h1><a href="../index/" title="LXDE.org"><img src="../sites/default/files/garland_logo/index.png" alt="LXDE.org" id="logo" /><span>LXDE.org</span></a></h1>        </div>
+        <h1><a href="../" title="LXDE.org"><img src="../sites/default/files/garland_logo/index.png" alt="LXDE.org" id="logo" /><span>LXDE.org</span></a></h1>        </div>
 
                   <ul class="links primary-links"><li class="menu-197 first"><a href="../lxde/" title="About LXDE">About</a></li>
 <li class="menu-231"><a href="../download/" title="">Download</a></li>
@@ -55,7 +55,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 
       
       <div id="center"><div id="squeeze"><div class="right-corner"><div class="left-corner">
-          <div class="breadcrumb"><a href="../index/">Home</a></div>                              <h2>Contact</h2>                                                  <div class="clear-block">
+          <div class="breadcrumb"><a href="../">Home</a></div>                              <h2>Contact</h2>                                                  <div class="clear-block">
             <form action="http://lxde.org/contact"  accept-charset="UTF-8" method="post" id="contact-mail-page">
 <div><ul>
 <li>Mailing Lists
