--- a/image_galleries/site_images/index.html
+++ b/image_galleries/site_images/index.html
@@ -40,7 +40,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 
       <div id="header">
         <div id="logo-floater">
-        <h1><a href="../../index/" title="LXDE.org"><img src="../../sites/default/files/garland_logo/index.png" alt="LXDE.org" id="logo" /><span>LXDE.org</span></a></h1>        </div>
+        <h1><a href="../../" title="LXDE.org"><img src="../../sites/default/files/garland_logo/index.png" alt="LXDE.org" id="logo" /><span>LXDE.org</span></a></h1>        </div>
 
                   <ul class="links primary-links"><li class="menu-197 first"><a href="../../lxde/" title="About LXDE">About</a></li>
 <li class="menu-231"><a href="../../download/" title="">Download</a></li>
@@ -55,7 +55,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 
       
       <div id="center"><div id="squeeze"><div class="right-corner"><div class="left-corner">
-          <div class="breadcrumb"><a href="../../index/">Home</a> › <a href="../../image/tid/">Image galleries</a></div>                              <h2>Site Images</h2>                                                  <div class="clear-block">
+          <div class="breadcrumb"><a href="../../">Home</a> › <a href="../../image/tid/">Image galleries</a></div>                              <h2>Site Images</h2>                                                  <div class="clear-block">
             <div class="view view-image-gallery-terms view-id-image_gallery_terms view-display-id-default view-dom-id-1">
     
   
