--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -28,7 +28,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
   <div id="header-region" class="clear-block"><div id="block-locale-0" class="clear-block block block-locale">
 
 
-  <div class="content"><ul><li class="en first"><a href="../index/" class="language-link">English</a></li>
+  <div class="content"><ul><li class="en first"><a href="../" class="language-link">English</a></li>
 <li class="pt-br active"><a href="index.html" class="language-link active">Português</a></li>
 <li class="es"><a href="../es/" class="language-link">Español</a></li>
 <li class="zh-hant last"><a href="../zh-tw/" class="language-link">正體中文</a></li>
