--- a/user/password/index.html
+++ b/user/password/index.html
@@ -40,7 +40,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 
       <div id="header">
         <div id="logo-floater">
-        <h1><a href="../../index/" title="LXDE.org"><img src="../../sites/default/files/garland_logo/index.png" alt="LXDE.org" id="logo" /><span>LXDE.org</span></a></h1>        </div>
+        <h1><a href="../../" title="LXDE.org"><img src="../../sites/default/files/garland_logo/index.png" alt="LXDE.org" id="logo" /><span>LXDE.org</span></a></h1>        </div>
 
                   <ul class="links primary-links"><li class="menu-197 first"><a href="../../lxde/" title="About LXDE">About</a></li>
 <li class="menu-231"><a href="../../download/" title="">Download</a></li>
@@ -55,7 +55,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 
       
       <div id="center"><div id="squeeze"><div class="right-corner"><div class="left-corner">
-          <div class="breadcrumb"><a href="../../index/">Home</a> › <a href="../">User account</a></div>                    <div id="tabs-wrapper" class="clear-block">          <h2 class="with-tabs">User account</h2>          <ul class="tabs primary"><li ><a href="../">Log in</a></li>
+          <div class="breadcrumb"><a href="../../">Home</a> › <a href="../">User account</a></div>                    <div id="tabs-wrapper" class="clear-block">          <h2 class="with-tabs">User account</h2>          <ul class="tabs primary"><li ><a href="../">Log in</a></li>
 <li class="active" ><a href="index.html" class="active">Request new password</a></li>
 </ul></div>                                        <div class="clear-block">
             <form action="http://lxde.org/user/password"  accept-charset="UTF-8" method="post" id="user-pass">
